# CodePageTest

./: .gitignore  CMakeLists.txt  README.md  note.md  run_test.bat
data/: unicode.txt
src/: main.cpp
